Still working on cors issue

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "yelp-api-wrapper": "^1.1.0",
     "yelp-fusion": "^3.0.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
